--- a/configs/tx6q-1036_mfg_defconfig
+++ b/configs/tx6q-1036_mfg_defconfig
@@ -2,8 +2,8 @@ CONFIG_SYS_EXTRA_OPTIONS="MMC_BOOT_SIZE=1024"
 CONFIG_ARM=y
 CONFIG_ARCH_MX6=y
 CONFIG_TARGET_TX6=y
-CONFIG_TARGET_TX6Q_1033=y
-CONFIG_TX6_UBOOT=y
+CONFIG_TARGET_TX6Q_1036=y
+CONFIG_TX6_UBOOT_MFG=y
 CONFIG_BOOTP_DNS=y
 CONFIG_BOOTP_GATEWAY=y
 CONFIG_BOOTP_SUBNETMASK=y
@@ -25,7 +25,6 @@ CONFIG_ENV_IS_IN_MMC=y
 CONFIG_FEC_MXC=y
 CONFIG_FEC_MXC_PHYADDR=0
 CONFIG_IMX_WATCHDOG=y
-CONFIG_LCD=y
 CONFIG_NET=y
 CONFIG_NETDEVICES=y
 CONFIG_PHY_SMSC=y
