--- a/configs/tx6q-1036_defconfig
+++ b/configs/tx6q-1036_defconfig
@@ -1,4 +1,4 @@
-CONFIG_SYS_EXTRA_OPTIONS="MMC_BOOT_SIZE=1024"
+CONFIG_SYS_EXTRA_OPTIONS="MMC_BOOT_SIZE=4096"
 CONFIG_ARM=y
 CONFIG_ARCH_MX6=y
 CONFIG_TARGET_TX6=y
@@ -30,3 +30,4 @@ CONFIG_NET=y
 CONFIG_NETDEVICES=y
 CONFIG_PHY_SMSC=y
 CONFIG_SYS_PROMPT="TX6Q U-Boot > "
+CONFIG_SYS_SDRAM_CHIP_SIZE=512
