karo: tx28: enable U-Boot build with different (or none) console UART

--- a/configs/tx28-40x1_defconfig
+++ b/configs/tx28-40x1_defconfig
@@ -1,4 +1,4 @@
-CONFIG_SYS_EXTRA_OPTIONS="SYS_SDRAM_SIZE=SZ_128M"
+CONFIG_SYS_EXTRA_OPTIONS="CONS_INDEX=0,SYS_SDRAM_SIZE=SZ_128M"
 CONFIG_ARM=y
 CONFIG_ARCH_MXS=y
 CONFIG_TARGET_TX28=y
