karo: tx6ul: enable soft i2c driver and 'i2c' command

--- a/board/karo/tx6/Kconfig
+++ b/board/karo/tx6/Kconfig
@@ -54,6 +54,8 @@ config TX6_EMMC
 config TX6UL
 	bool
 	select SOC_MX6UL
+	select SYS_I2C
+	select SYS_I2C_SOFT
 	select SYS_SDRAM_BUS_WIDTH_16
 
 config TX6QP
