--- a/configs/tx6ul-0010_defconfig
+++ b/configs/tx6ul-0010_defconfig
@@ -13,6 +13,7 @@ CONFIG_CMD_BOOTZ=y
 CONFIG_CMD_CACHE=y
 CONFIG_CMD_DHCP=y
 CONFIG_CMD_FUSE=y
+CONFIG_CMD_I2C=y
 CONFIG_CMD_MEMTEST=y
 CONFIG_CMD_MEMINFO=y
 CONFIG_CMD_MII=y
