Configure u-boot reserved area for 1gb single rank ram config

--- a/arch/arm/dts/txrz-g2l0.dts
+++ b/arch/arm/dts/txrz-g2l0.dts
@@ -26,10 +26,8 @@
 	memory@48000000 {
 		device_type = "memory";
 		/* first 128MB is reserved for secure area. */
-		reg = <0 0x48000000 0 0x18000000>,
-		      <0 0x60000000 0 0x20000000>;
+		reg = <0 0x48000000 0 0x38000000>;
 	};
-
 };
 
 &xinclk {
