--- a/configs/txrz-g2l0_defconfig
+++ b/configs/txrz-g2l0_defconfig
@@ -11,6 +11,7 @@ CONFIG_R9A07G044L=y
 CONFIG_TARGET_TXRZ=y
 # CONFIG_SPL is not set
 CONFIG_DEFAULT_DEVICE_TREE="txrz-g2l0"
+# CONFIG_ANDROID_BOOT_IMAGE is not set
 CONFIG_FIT=y
 CONFIG_BOOTDELAY=1
 CONFIG_USE_PREBOOT=y
@@ -44,10 +45,16 @@ CONFIG_SYSCON=y
 CONFIG_CLK=y
 CONFIG_CLK_RENESAS=y
 CONFIG_CLK_R9A07G044L=y
+CONFIG_UDP_FUNCTION_FASTBOOT=y
+CONFIG_FASTBOOT_BUF_ADDR=0x58000000
+CONFIG_FASTBOOT_FLASH=y
+CONFIG_FASTBOOT_FLASH_MMC_DEV=0
+CONFIG_FASTBOOT_CMD_OEM_FORMAT=y
 CONFIG_RCAR_GPIO=y
 CONFIG_RZG2L_GPIO=y
 CONFIG_DM_I2C=y
 CONFIG_SYS_I2C_RCAR_IIC=y
+CONFIG_DM_MMC=y
 CONFIG_SUPPORT_EMMC_BOOT=y
 CONFIG_SH_SDHI=y
 CONFIG_BITBANGMII=y
