dts: txrz: add non-removable property to emmc

--- a/arch/arm/dts/txrz-g2l0.dts
+++ b/arch/arm/dts/txrz-g2l0.dts
@@ -47,6 +47,7 @@
 	 * A HIGH signal on SD0_PWR_EN will enable supply voltage for SD card.
 	*/
 	bus-width = <8>;
+	non-removable;
 	status = "okay";
 };
 
