--- a/configs/txrz-g2l0_defconfig
+++ b/configs/txrz-g2l0_defconfig
@@ -50,6 +50,7 @@ CONFIG_FASTBOOT_BUF_ADDR=0x58000000
 CONFIG_FASTBOOT_FLASH=y
 CONFIG_FASTBOOT_FLASH_MMC_DEV=0
 CONFIG_FASTBOOT_CMD_OEM_FORMAT=y
+CONFIG_FASTBOOT_CMD_OEM_UCMD=y
 CONFIG_RCAR_GPIO=y
 CONFIG_RZG2L_GPIO=y
 CONFIG_DM_I2C=y
