rzg2: txrz: add fuse cmd functionality through sip call into atf

--- a/arch/arm/mach-rmobile/Makefile
+++ b/arch/arm/mach-rmobile/Makefile
@@ -5,6 +5,7 @@
 
 obj-y = cpu_info.o
 obj-y += emac.o
+obj-y += sip.o
 
 obj-$(CONFIG_DISPLAY_BOARDINFO) += board.o
 obj-$(CONFIG_GLOBAL_TIMER) += timer.o
