--- a/configs/txrz-g2l0_defconfig
+++ b/configs/txrz-g2l0_defconfig
@@ -21,6 +21,7 @@ CONFIG_VERSION_VARIABLE=y
 CONFIG_HUSH_PARSER=y
 CONFIG_SYS_PROMPT="TXRZ U-Boot > "
 CONFIG_CMD_BOOTZ=y
+CONFIG_CMD_FUSE=y
 CONFIG_CMD_GPIO=y
 CONFIG_CMD_I2C=y
 CONFIG_CMD_MMC=y
@@ -55,6 +56,7 @@ CONFIG_RCAR_GPIO=y
 CONFIG_RZG2L_GPIO=y
 CONFIG_DM_I2C=y
 CONFIG_SYS_I2C_RCAR_IIC=y
+CONFIG_MISC=y
 CONFIG_DM_MMC=y
 CONFIG_SUPPORT_EMMC_BOOT=y
 CONFIG_SH_SDHI=y
