--- a/configs/txrz-g2l0_defconfig
+++ b/configs/txrz-g2l0_defconfig
@@ -50,6 +50,7 @@ CONFIG_CLK_R9A07G044L=y
 CONFIG_USB_FUNCTION_FASTBOOT=y
 CONFIG_UDP_FUNCTION_FASTBOOT=y
 CONFIG_FASTBOOT_BUF_ADDR=0x58000000
+CONFIG_FASTBOOT_BUF_SIZE=0x30000000
 CONFIG_FASTBOOT_FLASH=y
 CONFIG_FASTBOOT_FLASH_MMC_DEV=0
 CONFIG_FASTBOOT_CMD_OEM_FORMAT=y
