--- a/arch/arm/dts/imx8mp-qsxp-ml81-u-boot.dtsi
+++ b/arch/arm/dts/imx8mp-qsxp-ml81-u-boot.dtsi
@@ -3,7 +3,7 @@
  * Copyright (C) 2020 Lothar Waßmann <LW@KARO-electronics.de>
  *
  */
-#include "imx8mp-tx8mp-u-boot.dtsi"
+#include "imx8mp-tx8p-u-boot.dtsi"
 
 &clk {
 	/delete-property/ assigned-clocks;
