--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -795,7 +795,9 @@ dtb-$(CONFIG_ARCH_IMX8M) += \
 	imx8mm-qsxm-mm60.dtb \
 	imx8mm-qsxm-mm60-qsbase3.dtb \
 	imx8mm-tx8m-1610.dtb \
+	imx8mm-tx8m-1610-mipi-mb.dtb \
 	imx8mm-tx8m-1620.dtb \
+	imx8mm-tx8m-1620-lvds-mb.dtb \
 	imx8mm-tx8m-1622.dtb \
 	imx8mn-ddr3l-evk.dtb \
 	imx8mn-ddr4-evk.dtb \
@@ -803,6 +805,7 @@ dtb-$(CONFIG_ARCH_IMX8M) += \
 	imx8mn-qs8m-nd00.dtb \
 	imx8mn-qs8m-nd00-qsbase2.dtb \
 	imx8mn-tx8m-nd00.dtb \
+	imx8mn-tx8m-nd00-mipi-mb.dtb \
 	imx8mp-qsxp-ml81.dtb \
 	imx8mp-qsxp-ml81-qsbase3.dtb \
 	imx8mp-tx8p-ml81.dtb \
