--- a/arch/arm/dts/imx8mn-tx8m-nd00.dts
+++ b/arch/arm/dts/imx8mn-tx8m-nd00.dts
@@ -9,7 +9,7 @@
 #include "imx8mn-karo.dtsi"
 
 / {
-	model = "Ka-Ro electronics TX8M-ND00 (NXP i.MX8MN) board";
+	model = "Ka-Ro electronics TX8M-ND00 (NXP i.MX8MN) module";
 
 	reg_3v3_etn: regulator-3v3-etn {
 		compatible = "regulator-fixed";
@@ -235,31 +235,9 @@
 	status = "okay";
 };
 
-&usdhc1 { /* eMMC */
-	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_usdhc1>;
-	bus-width = <8>;
-	non-removable;
-	status = "okay";
-};
-
-&usdhc2 {
-	pinctrl-names = "default", "state_100mhz", "state_200mhz";
-	pinctrl-0 = <&pinctrl_usdhc2 &pinctrl_usdhc2_cd>;
-	pinctrl-1 = <&pinctrl_usdhc2_100mhz &pinctrl_usdhc2_cd>;
-	pinctrl-2 = <&pinctrl_usdhc2_200mhz &pinctrl_usdhc2_cd>;
-	bus-width = <4>;
-	cd-gpios = <&gpio2 12 GPIO_ACTIVE_LOW>;
-	no-1-8-v;
-	fsl,wp-controller;
-	status = "okay";
-};
-
 &usdhc3 {
-	pinctrl-names = "default", "state_100mhz", "state_200mhz";
+	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_usdhc3 &pinctrl_usdhc3_cd>;
-	pinctrl-1 = <&pinctrl_usdhc3_100mhz &pinctrl_usdhc3_cd>;
-	pinctrl-2 = <&pinctrl_usdhc3_200mhz &pinctrl_usdhc3_cd>;
 	bus-width = <4>;
 	cd-gpios = <&gpio3 8 GPIO_ACTIVE_LOW>;
 	no-1-8-v;
@@ -323,28 +301,6 @@
 			MX8MN_IOMUXC_NAND_DATA05_USDHC3_DATA1		0x150
 			MX8MN_IOMUXC_NAND_DATA06_USDHC3_DATA2		0x150
 			MX8MN_IOMUXC_NAND_DATA07_USDHC3_DATA3		0x150
-		>;
-	};
-
-	pinctrl_usdhc3_100mhz: usdhc3grp100mhz {
-		fsl,pins = <
-			MX8MN_IOMUXC_NAND_WE_B_USDHC3_CLK		0x40000114
-			MX8MN_IOMUXC_NAND_WP_B_USDHC3_CMD		0x154
-			MX8MN_IOMUXC_NAND_DATA04_USDHC3_DATA0		0x154
-			MX8MN_IOMUXC_NAND_DATA05_USDHC3_DATA1		0x154
-			MX8MN_IOMUXC_NAND_DATA06_USDHC3_DATA2		0x154
-			MX8MN_IOMUXC_NAND_DATA07_USDHC3_DATA3		0x154
-		>;
-	};
-
-	pinctrl_usdhc3_200mhz: usdhc3grp200mhz {
-		fsl,pins = <
-			MX8MN_IOMUXC_NAND_WE_B_USDHC3_CLK		0x40000116
-			MX8MN_IOMUXC_NAND_WP_B_USDHC3_CMD		0x156
-			MX8MN_IOMUXC_NAND_DATA04_USDHC3_DATA0		0x156
-			MX8MN_IOMUXC_NAND_DATA05_USDHC3_DATA1		0x156
-			MX8MN_IOMUXC_NAND_DATA06_USDHC3_DATA2		0x156
-			MX8MN_IOMUXC_NAND_DATA07_USDHC3_DATA3		0x156
 		>;
 	};
 
