--- a/arch/arm/dts/imx8mp-karo.dtsi
+++ b/arch/arm/dts/imx8mp-karo.dtsi
@@ -30,6 +30,14 @@
 		      <0x1 0x00000000 0 0x40000000>;
 	};
 
+	reg_1v8: regulator-1v8 {
+		compatible = "regulator-fixed";
+		regulator-name = "1v8";
+		regulator-min-microvolt = <1800000>;
+		regulator-max-microvolt = <1800000>;
+		regulator-always-on;
+	};
+
 	reg_3v3: regulator-3v3 {
 		compatible = "regulator-fixed";
 		regulator-name = "3v3";
@@ -88,11 +96,11 @@
 };
 
 &usdhc2 {
-	pinctrl-names = "default", "state_100mhz", "state_200mhz";
+	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_usdhc2 &pinctrl_usdhc2_cd>;
-	pinctrl-1 = <&pinctrl_usdhc2_100mhz &pinctrl_usdhc2_cd>;
-	pinctrl-2 = <&pinctrl_usdhc2_200mhz &pinctrl_usdhc2_cd>;
 	bus-width = <4>;
+	vqmmc-supply = <&reg_3v3>;
+	vmmc-supply = <&reg_3v3>;
 	cd-gpios = <&gpio2 12 GPIO_ACTIVE_LOW>;
 	no-1-8-v;
 	fsl,wp-controller;
@@ -100,9 +108,12 @@
 };
 
 &usdhc3 { /* eMMC */
-	pinctrl-names = "default";
+	pinctrl-names = "default", "state_100mhz", "state_200mhz";
 	pinctrl-0 = <&pinctrl_usdhc3>;
+	pinctrl-1 = <&pinctrl_usdhc3_100mhz>;
+	pinctrl-2 = <&pinctrl_usdhc3_200mhz>;
 	bus-width = <8>;
+	vqmmc-supply = <&reg_1v8>;
 	vmmc-supply = <&reg_3v3>;
 	non-removable;
 	status = "okay";
@@ -189,28 +200,6 @@
 		>;
 	};
 
-	pinctrl_usdhc2_100mhz: usdhc2grp100mhz {
-		fsl,pins = <
-			MX8MP_IOMUXC_SD2_CLK__USDHC2_CLK		0x114
-			MX8MP_IOMUXC_SD2_CMD__USDHC2_CMD		0x154
-			MX8MP_IOMUXC_SD2_DATA0__USDHC2_DATA0		0x154
-			MX8MP_IOMUXC_SD2_DATA1__USDHC2_DATA1		0x154
-			MX8MP_IOMUXC_SD2_DATA2__USDHC2_DATA2		0x154
-			MX8MP_IOMUXC_SD2_DATA3__USDHC2_DATA3		0x154
-		>;
-	};
-
-	pinctrl_usdhc2_200mhz: usdhc2grp200mhz {
-		fsl,pins = <
-			MX8MP_IOMUXC_SD2_CLK__USDHC2_CLK		0x116
-			MX8MP_IOMUXC_SD2_CMD__USDHC2_CMD		0x156
-			MX8MP_IOMUXC_SD2_DATA0__USDHC2_DATA0		0x156
-			MX8MP_IOMUXC_SD2_DATA1__USDHC2_DATA1		0x156
-			MX8MP_IOMUXC_SD2_DATA2__USDHC2_DATA2		0x156
-			MX8MP_IOMUXC_SD2_DATA3__USDHC2_DATA3		0x156
-		>;
-	};
-
 	pinctrl_usdhc2_cd: usdhc2-cdgrp {
 		fsl,pins = <
 			MX8MP_IOMUXC_SD2_CD_B__GPIO2_IO12		0x1c0
@@ -230,6 +219,38 @@
 			MX8MP_IOMUXC_NAND_CE3_B__USDHC3_DATA6		0x150
 			MX8MP_IOMUXC_NAND_CLE__USDHC3_DATA7		0x150
 			MX8MP_IOMUXC_NAND_CE1_B__USDHC3_STROBE		0x110
+		>;
+	};
+
+	pinctrl_usdhc3_100mhz: usdhc3grp100mhz {
+		fsl,pins = <
+			MX8MP_IOMUXC_NAND_WE_B__USDHC3_CLK		0x114
+			MX8MP_IOMUXC_NAND_WP_B__USDHC3_CMD		0x154
+			MX8MP_IOMUXC_NAND_DATA04__USDHC3_DATA0		0x154
+			MX8MP_IOMUXC_NAND_DATA05__USDHC3_DATA1		0x154
+			MX8MP_IOMUXC_NAND_DATA06__USDHC3_DATA2		0x154
+			MX8MP_IOMUXC_NAND_DATA07__USDHC3_DATA3		0x154
+			MX8MP_IOMUXC_NAND_RE_B__USDHC3_DATA4		0x154
+			MX8MP_IOMUXC_NAND_CE2_B__USDHC3_DATA5		0x154
+			MX8MP_IOMUXC_NAND_CE3_B__USDHC3_DATA6		0x154
+			MX8MP_IOMUXC_NAND_CLE__USDHC3_DATA7		0x154
+			MX8MP_IOMUXC_NAND_CE1_B__USDHC3_STROBE		0x114
+		>;
+	};
+
+	pinctrl_usdhc3_200mhz: usdhc3grp200mhz {
+		fsl,pins = <
+			MX8MP_IOMUXC_NAND_WE_B__USDHC3_CLK		0x116
+			MX8MP_IOMUXC_NAND_WP_B__USDHC3_CMD		0x156
+			MX8MP_IOMUXC_NAND_DATA04__USDHC3_DATA0		0x156
+			MX8MP_IOMUXC_NAND_DATA05__USDHC3_DATA1		0x156
+			MX8MP_IOMUXC_NAND_DATA06__USDHC3_DATA2		0x156
+			MX8MP_IOMUXC_NAND_DATA07__USDHC3_DATA3		0x156
+			MX8MP_IOMUXC_NAND_RE_B__USDHC3_DATA4		0x156
+			MX8MP_IOMUXC_NAND_CE2_B__USDHC3_DATA5		0x156
+			MX8MP_IOMUXC_NAND_CE3_B__USDHC3_DATA6		0x156
+			MX8MP_IOMUXC_NAND_CLE__USDHC3_DATA7		0x156
+			MX8MP_IOMUXC_NAND_CE1_B__USDHC3_STROBE		0x116
 		>;
 	};
 
