--- a/arch/arm/dts/imx8mm-qs8m-mq00.dts
+++ b/arch/arm/dts/imx8mm-qs8m-mq00.dts
@@ -66,3 +66,27 @@
 		MX8MM_IOMUXC_SD1_RESET_B_USDHC1_RESET_B		0x156
 	>;
 };
+
+&uart1 {
+	/delete-property/uart-has-rtscts;
+	pinctrl-0 = <&pinctrl_uart1>;
+};
+
+&uart2 {
+	/delete-property/uart-has-rtscts;
+	pinctrl-0 = <&pinctrl_uart2>;
+};
+
+&uart3 {
+	/delete-property/uart-has-rtscts;
+	pinctrl-0 = <&pinctrl_uart3_qs8m>;
+};
+
+&iomuxc {
+	pinctrl_uart3_qs8m: uart3-qs8mgrp {
+		fsl,pins = <
+			MX8MM_IOMUXC_UART3_RXD_UART3_DCE_RX	0x140
+			MX8MM_IOMUXC_UART3_TXD_UART3_DCE_TX	0x140
+		>;
+	};
+};
