Add qsrz-g2l0 support and unify naming of devicetree and board files

--- a/configs/qsrz-g2l0_defconfig
+++ b/configs/qsrz-g2l0_defconfig
@@ -10,16 +10,16 @@ CONFIG_RCAR_GEN3=y
 CONFIG_R9A07G044L=y
 CONFIG_TARGET_TXRZ=y
 # CONFIG_SPL is not set
-CONFIG_DEFAULT_DEVICE_TREE="r9a07g044l2-txrz-g2l0"
+CONFIG_DEFAULT_DEVICE_TREE="r9a07g044l2-qsrz-g2l0"
 # CONFIG_ANDROID_BOOT_IMAGE is not set
 CONFIG_FIT=y
 CONFIG_BOOTDELAY=1
 CONFIG_USE_PREBOOT=y
 CONFIG_SUPPORT_RAW_INITRD=y
-CONFIG_DEFAULT_FDT_FILE="r9a07g044l2-txrz-g2l0.dtb"
+CONFIG_DEFAULT_FDT_FILE="r9a07g044l2-qsrz-g2l0.dtb"
 CONFIG_VERSION_VARIABLE=y
 CONFIG_HUSH_PARSER=y
-CONFIG_SYS_PROMPT="TXRZ U-Boot > "
+CONFIG_SYS_PROMPT="QSRZ U-Boot > "
 CONFIG_CMD_BOOTZ=y
 CONFIG_CMD_FUSE=y
 CONFIG_CMD_GPIO=y
@@ -41,7 +41,7 @@ CONFIG_ENV_OVERWRITE=y
 CONFIG_ENV_IS_IN_MMC=y
 CONFIG_SYS_MMC_ENV_PART=1
 CONFIG_USE_DEFAULT_ENV_FILE=y
-CONFIG_DEFAULT_ENV_FILE="board/$(VENDOR)/$(BOARD)/txrz-g2l0_env.txt"
+CONFIG_DEFAULT_ENV_FILE="board/$(VENDOR)/$(BOARD)/qsrz-g2l0_env.txt"
 CONFIG_REGMAP=y
 CONFIG_SYSCON=y
 CONFIG_CLK=y
@@ -84,7 +84,7 @@ CONFIG_USB_XHCI_HCD=y
 CONFIG_USB_EHCI_HCD=y
 CONFIG_USB_EHCI_GENERIC=y
 CONFIG_USB_STORAGE=y
-CONFIG_KARO_TXRZ_G2L0=y
+CONFIG_KARO_QSRZ_G2L0=y
 CONFIG_USB_GADGET=y
 CONFIG_USB_GADGET_MANUFACTURER="Renesas"
 CONFIG_USB_GADGET_VENDOR_NUM=0x0525
