rzg2l: add qsrz-g2l1 and txrz-g2l1 support

--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -795,7 +795,9 @@ dtb-$(CONFIG_RCAR_GEN3) += \
 	r8a77990-ebisu-u-boot.dtb \
 	r8a77995-draak-u-boot.dtb \
 	r9a07g044l2-txrz-g2l0.dtb \
+	r9a07g044l2-txrz-g2l1.dtb \
 	r9a07g044l2-qsrz-g2l0.dtb \
+	r9a07g044l2-qsrz-g2l1.dtb \
 	rzg2l-dev.dtb \
 	smarc-rzg2l.dtb \
 	rzv2l-dev.dtb \
